# swagger_server/controllers/default_controller.py
@@ -54,6 +54,8 @@ def get_student_by_id(student_id, subject=None):  # noqa: E501
     if res:
         return res
     return 'Not Found', 404
+
+
 def get_student_by_last_name(last_name=None):  # noqa: E501
     """Find student by Last Name
 
@@ -64,4 +66,7 @@ def get_student_by_last_name(last_name=None):  # noqa: E501
 
     :rtype: Student
     """
-    return 'do some magic!'
+    res = student_service.get_student_by_last_name(last_name)
+    if res:
+        return res
+    return 'Not Found', 404
