# swagger_server/swagger/swagger.yaml
@@ -9,29 +9,6 @@ schemes:
 - "http"
 paths:
   /student:
-    get:
-      summary: "Find student by Last Name"
-      description: "Returns a single student"
-      operationId: "get_student_by_last_name"
-      produces:
-      - "application/xml"
-      - "application/json"
-      parameters:
-      - name: "last_name"
-        in: "query"
-        description: "Last Name of student to return"
-        required: false
-        type: "string"
-      responses:
-        "200":
-          description: "successful operation"
-          schema:
-            $ref: "#/definitions/Student"
-        "400":
-          description: "Invalid Last Name supplied"
-        "404":
-          description: "student not found"
-      x-swagger-router-controller: "swagger_server.controllers.default_controller"
     post:
       summary: "Add a new student"
       description: ""
@@ -59,6 +36,30 @@ paths:
           description: "Invalid input"
         "409":
           description: "already exists"
+      x-swagger-router-controller: "swagger_server.controllers.default_controller"
+  /student/:
+    get:
+      summary: "Find student by Last Name"
+      description: "Returns a single student"
+      operationId: "get_student_by_last_name"
+      produces:
+      - "application/xml"
+      - "application/json"
+      parameters:
+      - name: "last_name"
+        in: "query"
+        description: "Last Name of student to return"
+        required: true
+        type: "string"
+      responses:
+        "200":
+          description: "successful operation"
+          schema:
+            $ref: "#/definitions/Student"
+        "400":
+          description: "Invalid Last Name supplied"
+        "404":
+          description: "student not found"
       x-swagger-router-controller: "swagger_server.controllers.default_controller"
   /student/{student_id}:
     get:
